# FileOctopus

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CRON_STATUS.md  CRON_TASKS.md  Cargo.toml  FileOctopus_Sprint_4_Baseline_Completeness_Backlog.md  LICENSE  README.md  SECURITY.md  architecture-security-review.md  eslint.config.js  fileoctopus-sprint-3-implementation-backlog.md  fileoctopus_mvp_engineering_spec_and_rust_api_design.md  fileoctopus_sprint_0_1_github_backlog.md  fo-screenshots.cjs  fo-ui-screenshots.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  tsconfig.e2e.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml  e2e-tauri-manual.yml  release-assets.yml  security-audit.yml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs
apps/cli/tests/: cli_smoke.rs
apps/desktop-tauri/: README.md  index.html  package.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: emit.rs  lib.rs  main.rs  menu.rs  state.rs  tests.rs
apps/desktop-tauri/src-tauri/src/commands/: acl.rs  app_info.rs  autostart.rs  compare.rs  content_search.rs  diagnostics.rs  file_operations.rs  folder_size.rs  fs.rs  git.rs  mod.rs  navigation.rs  network.rs  plugin.rs  preferences.rs  recursive_search.rs  sync.rs  terminal.rs  watch.rs
apps/desktop-tauri/src-tauri/tests/: ipc_acl_test.rs  ipc_archive_test.rs  ipc_basic_test.rs  ipc_diff_test.rs  ipc_eject_test.rs  ipc_error_test.rs  ipc_file_ops_test.rs  ipc_folder_test.rs  ipc_hash_test.rs  ipc_preview_test.rs  ipc_reveal_test.rs  ipc_search_test.rs  ipc_sync_test.rs  ipc_terminal_test.rs  ipc_watch_test.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: boot_config.rs  history.rs  lib.rs  paths.rs  runtime.rs  tests.rs
crates/app-ipc/: Cargo.toml
crates/app-ipc/src/: acl.rs  app_info.rs  common.rs  compare.rs  diagnostics.rs  file_operations.rs  fs.rs  git.rs  lib.rs  listing.rs  locations.rs  navigation.rs  network.rs  plugins.rs  preferences.rs  search.rs  sync.rs  terminal.rs
crates/app-ipc/tests/: autostart_dto.rs  terminal_dto.rs  ts_exports.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  navigation.rs  network.rs  terminal.rs
crates/config/tests/: terminal_profiles.rs
crates/fs-core/: Cargo.toml
crates/fs-core/src/: compare.rs  content_search.rs  direct_ops.rs  external_open.rs  file_ops.rs  lib.rs  locations.rs  metadata.rs  placeholder.rs  search.rs  sprint4.rs  sync.rs  vfs_io.rs
crates/fs-core/src/file_ops/: archive.rs  execution.rs  mod.rs  paths.rs  planning.rs  tests.rs  trash.rs
crates/fs-core/tests/: fs_core_baseline.rs  local_provider.rs  placeholder.rs  provider_neutral_planning.rs  range_io_tests.rs  sprint4_baseline.rs
crates/git-intel/: Cargo.toml
crates/git-intel/src/: lib.rs
crates/git-intel/tests/: git_service.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  secret_store.rs  terminal_external.rs
crates/platform/tests/: secret_store.rs  terminal_external.rs
crates/plugin-core/: Cargo.toml
crates/provider-dropbox/: Cargo.toml
crates/provider-gdrive/: Cargo.toml
crates/provider-gdrive/src/: connector.rs  lib.rs  ops.rs  provider.rs
crates/provider-onedrive/: Cargo.toml
crates/provider-s3/: Cargo.toml
crates/provider-s3/src/: client.rs  connector.rs  lib.rs  ops.rs  provider.rs
crates/provider-s3/tests/: connector_test.rs  ops_test.rs
crates/provider-sftp/: Cargo.toml
crates/provider-sftp/src/: connector.rs  lib.rs  ops.rs  provider.rs
crates/provider-sftp/tests/: capabilities.rs  fingerprint.rs
crates/provider-smb/: Cargo.toml
crates/provider-smb/src/: connector.rs  lib.rs  ops.rs  provider.rs
crates/provider-smb/tests/: connector_test.rs  ops_test.rs
crates/provider-webdav/: Cargo.toml
crates/provider-webdav/src/: client.rs  connector.rs  lib.rs  provider.rs
crates/provider-webdav/tests/: client_contract.rs  connector_test.rs  provider_contract.rs
crates/provider-webdav/tests/support/: mod.rs
crates/remote-core/: Cargo.toml
crates/remote-core/src/: error.rs  lib.rs  neighborhood.rs  secrets.rs  session.rs
crates/remote-core/tests/: secrets.rs  session_manager.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/telemetry/tests/: init.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: error.rs  lib.rs  service.rs  shell.rs
crates/terminal-core/tests/: sigint_test.rs  spawn_env_test.rs  spawn_test.rs
crates/test-support/: Cargo.toml
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
docs/: FileOctopus_UI_Design_Spec.md  FileOctopus_UI_Design_and_Layout_Specification-1.md  FileOctopus_UI_Elements_Inventory.md  FileOctopus_UI_Prototype.tsx  build.md  performance.md  ui-premium-polish-improvement-plan.md  usage.md
docs/adr/: 0000-template.md  README.md  (+5 more)
e2e/: README.md  app-layout.e2e.ts  breadcrumb-interaction.e2e.ts  checksum.e2e.ts  compress-extract.e2e.ts  context-menu.e2e.ts  diagnostics.e2e.ts  dialog.e2e.ts  empty-directory.e2e.ts  filter-bar.e2e.ts  keyboard-shortcuts.e2e.ts  menubar.e2e.ts  multi-rename.e2e.ts  navigation.e2e.ts  pane-states.e2e.ts  properties-dialog.e2e.ts  rename-goto-search.e2e.ts  sidebar-context-menu.e2e.ts  sidebar.e2e.ts  status-bar.e2e.ts  storage-gauge.e2e.ts  tab-management.e2e.ts  toast-notifications.e2e.ts  toolbar.e2e.ts  view-modes.e2e.ts  visual-regression.e2e.ts
e2e-tauri/: README.md  tsconfig.json  wdio.conf.ts
scripts/: bootstrap.ps1  bootstrap.sh  check-ipc-types.sh  check-package-exports.mjs  copy-package-assets.mjs  dev.mjs  e2e.sh  fix-package-esm.mjs  generate-ipc-types.sh  health-check.sh  packaged-smoke.sh  pre-commit-checks.sh  pre-push-audit.sh  rc-qa-automated.sh  release-guard.mjs  release-pipeline.test.mjs  sftp-file-ops-qa.md  slice-b-manual-qa.sh  sync-to-remote.sh
(+92 files in other folders)
