[workspace]
resolver = "2"
members = [
  "apps/cli",
  "apps/desktop-tauri/src-tauri",
  "crates/app-core",
  "crates/app-ipc",
  "crates/config",
  "crates/fs-core",
  "crates/git-intel",
  "crates/jobs",
  "crates/platform",
  "crates/provider-sftp",
  "crates/provider-smb",
  "crates/provider-s3",
  "crates/provider-gdrive",
  "crates/provider-dropbox",
  "crates/provider-onedrive",
  "crates/remote-core",
  "crates/telemetry",
  "crates/terminal-core",
  "crates/test-support",
  "crates/vfs",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
