[workspace]
resolver = "2"
members = [
  "apps/cli",
  "apps/desktop-tauri/src-tauri",
  "crates/app-core",
  "crates/app-ipc",
  "crates/config",
  "crates/fs-core",
  "crates/git-intel",
  "crates/jobs",
  "crates/platform",
  "crates/provider-sftp",
  "crates/provider-smb",
  "crates/provider-s3",
  "crates/provider-webdav",
  "crates/provider-gdrive",
  "crates/provider-dropbox",
  "crates/provider-onedrive",
  "crates/remote-core",
  "crates/telemetry",
  "crates/terminal-core",
  "crates/test-support",
  "crates/vfs",
  "crates/plugin-core",
]

[workspace.package]
edition = "2021"
rust-version = "1.96.1"
version = "0.1.6"
license = "MIT"
repository = "https://github.com/ilyafedotov-ops/FileOctopus"
homepage = "https://github.com/ilyafedotov-ops/FileOctopus"
authors = ["Ilya Fedotov"]
