[package]
name = "app-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { path = "../config" }
git-intel = { path = "../git-intel" }
jobs = { path = "../jobs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plugin-core = { path = "../plugin-core" }
vfs = { path = "../vfs" }

[dev-dependencies]
