[package]
name = "fs-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4"
filetime = "0.2"
jobs = { path = "../jobs" }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../vfs" }
zip = "0.6"

[dev-dependencies]
tempfile = "3"
