[package]
name = "fs-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4"
filetime = "0.2"
jobs = { path = "../jobs" }
provider-sftp = { path = "../provider-sftp" }
remote-core = { path = "../remote-core" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../vfs" }
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
