[package]
name = "fs-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4"
filetime = "0.2"
jobs = { path = "../jobs" }
remote-core = { path = "../remote-core" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../vfs" }
zip = "8.6.0"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
hex = "0.4"
regex = "1"
sha2 = "0.10"
tempfile = "3"
trash = "5.0"
kamadak-exif = "0.6.1"

[target.'cfg(any(target_os = "linux", target_os = "android", target_vendor = "apple"))'.dependencies]
rustix = { version = "1", features = ["fs"] }
