[package]
name = "git-intel"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
vfs = { path = "../vfs" }
ts-rs = { version = "12", optional = true, features = ["serde-compat", "chrono-impl"] }

[features]
ts = ["dep:ts-rs", "vfs/ts"]

[dev-dependencies]
tempfile = "3"
