[package]
name = "platform"
version.workspace = true
edition.workspace = true

[dependencies]
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
thiserror = "1"

[target.'cfg(unix)'.dependencies]
which = "6"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
