[package]
name = "provider-s3"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = { path = "../config" }
remote-core = { path = "../remote-core" }
hex = "0.4"
hmac = "0.12"
percent-encoding = "2"
quick-xml = { version = "0.41", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
vfs = { path = "../vfs" }

[dev-dependencies]
tempfile = "3"
