[package]
name = "provider-smb"
version.workspace = true
edition.workspace = true

[features]
default = []
pavao = ["dep:pavao"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = { path = "../config" }
remote-core = { path = "../remote-core" }
pavao = { version = "0.2", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
vfs = { path = "../vfs" }

[dev-dependencies]
tempfile = "3"
