[package]
name = "telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
