[package]
name = "vfs"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[dev-dependencies]
serde_json = "1"
