[package]
name = "fileoctopus-desktop"
version = "0.1.0"
description = "FileOctopus desktop shell"
authors = ["Ilya Fedotov"]
edition = "2021"

[lib]
name = "fileoctopus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-core = { path = "../../../crates/app-core" }
app-ipc = { path = "../../../crates/app-ipc" }
config = { path = "../../../crates/config" }
chrono = "0.4"
fs-core = { path = "../../../crates/fs-core" }
jobs = { path = "../../../crates/jobs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-autostart = "2"
telemetry = { path = "../../../crates/telemetry" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../../../crates/vfs" }
sha256 = "1"
base64 = "0.22"
which = "6"
zip = "0.6"

[dev-dependencies]
tempfile = "3"
