[package]
name = "fileoctopus-desktop"
version = "0.1.0"
description = "FileOctopus desktop shell"
authors = ["Ilya Fedotov"]
edition = "2021"

[features]
default = []
devtools = ["tauri/devtools"]

[lib]
name = "fileoctopus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-core = { path = "../../../crates/app-core" }
app-ipc = { path = "../../../crates/app-ipc" }
config = { path = "../../../crates/config" }
chrono = "0.4"
fs-core = { path = "../../../crates/fs-core" }
jobs = { path = "../../../crates/jobs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
remote-core = { path = "../../../crates/remote-core" }
platform = { path = "../../../crates/platform" }
telemetry = { path = "../../../crates/telemetry" }
terminal-core = { path = "../../../crates/terminal-core" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
uuid = { version = "1", features = ["v4"] }
vfs = { path = "../../../crates/vfs" }
plugin-core = { path = "../../../crates/plugin-core" }
sha256 = "1"
base64 = "0.22"
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
similar = "2"

[dev-dependencies]
tempfile = "3"
